--- a/index.html
+++ b/index.html
@@ -195,6 +195,16 @@
                                 </div>
 
                             </div>
+
+                            <div class="row">
+                                <div class="education">
+                                    <h3>Education</h3>
+                                </div>
+                                <div class="xperience">
+                                    <h3>Experience</h3>
+                                </div>
+                                
+                            </div>
                         </div>
 
                     </div>
