--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             </section>
 
-            <section class="about section hidden">
+            <section class="about section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
@@ -89,11 +89,11 @@
                                 <div class="personal-info paddings-1">
                                     <div class="row">
                                         <div class="info-item paddings-1">
-                                            <p>Birthday : <span>7 Sept. 1997</span></p>
+                                            <p>Birthday: <span>7 September</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>Age : <span>25</span></p>
+                                            <p>Age: <span>25</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
@@ -101,23 +101,23 @@
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>Email : <span>ikponkedet@gmail.com</span></p>
+                                            <p>Email: <span>ikponkedet@gmail.com</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>Degree : <span>Bsc(ed)</span></p>
+                                            <p>Degree: <span>Bsc(ed)</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>Phone : <span>+2347081682902</span></p>
+                                            <p>Phone: <span>+2347081682902</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>City : <span>Lagos, Nigeria</span></p>
+                                            <p>City: <span>Lagos, Nigeria</span></p>
                                         </div>
 
                                         <div class="info-item paddings-1">
-                                            <p>Freelance : <span>Available</span></p>
+                                            <p>Freelance: <span>Available</span></p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -388,7 +388,7 @@
 
             <!-- services section  start here-->
 
-            <section class="service section hidden">
+            <section class="service section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
@@ -471,7 +471,7 @@
             <!-- service section eends here -->
 
             <!-- Portfolio section starts here -->
-            <section class="portfolio section hidden">
+            <section class="portfolio section">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
