--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>A.E.A Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="/color.css">
+    <!-- <link rel="stylesheet" href="/color1.css"> -->
+    <!-- <link rel="stylesheet" href="/color2.css"> -->
+    <!-- <link rel="stylesheet" href="/color3.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
@@ -632,14 +635,29 @@
 
       <!-- contact section ends here --> 
 
-
-
- 
-
         </div>
 
         </div>
-        
+
+        <!-- style switcher starts here -->
+        <div class="style-switcher">
+            <div class="style-switcher-toggler s-icon">
+                <i class="fas fa-cog fa-skin"></i>
+            </div>
+
+            <div class="day-night s-icon">
+                <i class="fas fa-moon"></i>
+            </div>
+            <h4>Theme colors</h4>
+            <div class="colors">
+                <span class="color-1" onclick="setActiveStyle('color-1')"></span>
+                <span class="color-2" onclick="setActiveStyle('color-2')"></span>
+                <span class="color-3" onclick="setActiveStyle('color-3')"></span>
+                <span class="color-4" onclick="setActiveStyle('color-4')"></span>
+                <span class="color-5" onclick="setActiveStyle('color-5')"></span>
+            </div>
+        </div>
+        <!-- style switcher ends here  -->
 
    
 
