--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <!-- <link rel="stylesheet" href="/color3.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style-switcher.css">
+    <link rel="stylesheet" href="/color1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="/color2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="/color3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="/color4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="/color.css" class="alternate-style" title="color-5" disabled>
+
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
 </head>
 
@@ -642,11 +649,11 @@
         <!-- style switcher starts here -->
         <div class="style-switcher">
             <div class="style-switcher-toggler s-icon">
-                <i class="fas fa-cog fa-skin"></i>
+                <i class="fas fa-cog fa-spin i2"></i>
             </div>
 
             <div class="day-night s-icon">
-                <i class="fas fa-moon"></i>
+                <i class="fas fa-moon i2"></i>
             </div>
             <h4>Theme colors</h4>
             <div class="colors">
@@ -666,6 +673,7 @@
 
 
     <script src="./script.js"></script>
+    <script src="/style-switcher.js"></script>
 </body>
 
 </html>
