--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
            
 
             <ul class="side-nav">
-                <li><a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i>HOME</a></li>
-                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i>ABOUT</a></li>
-                <li><a href="#"><i class="fa fa-list" aria-hidden="true"></i>SERVICES</a></li>
-                <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>CONTACT</a></li>
-                <li><a href="#"><i class="fa fa-comments" aria-hidden="true"></i>PORTFOLIO</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home" aria-hidden="true"></i>HOME</a></li>
+                <li><a href="#about"><i class="fa fa-user" aria-hidden="true"></i>ABOUT</a></li>
+                <li><a href="#services"><i class="fa fa-list" aria-hidden="true"></i>SERVICES</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase" aria-hidden="true"></i>CONTACT</a></li>
+                <li><a href="#contact"><i class="fa fa-comments" aria-hidden="true"></i>PORTFOLIO</a></li>
             </ul>
 
         </div>
     </div>
 
         <div class="main-content">
-            <section class="home section">
+            <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info paddings-1">
@@ -67,7 +67,7 @@
 
             </section>
 
-            <section class="about section">
+            <section class="about section" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
@@ -398,7 +398,7 @@
 
             <!-- services section  start here-->
 
-            <section class="service section">
+            <section class="service section" id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
@@ -481,7 +481,7 @@
             <!-- service section eends here -->
 
             <!-- Portfolio section starts here -->
-            <section class="portfolio section">
+            <section class="portfolio section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title paddings-1">
@@ -554,7 +554,7 @@
       <!-- Portfolio section end here -->
 
       <!-- contact section start here -->
-      <section class="contact section">
+      <section class="contact section" id="contact">
         <div class="container">
             <div class="row">
                 <div class="section-title paddings-1">
@@ -653,7 +653,8 @@
             </div>
 
             <div class="day-night s-icon">
-                <i class="fas fa-moon i2"></i>
+                <!-- <i class="fas fa-moon i2"></i> -->
+                <i class="fas i2"></i>
             </div>
             <h4>Theme colors</h4>
             <div class="colors">
