--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
         <div class="main-content">
-            <section class="home section" id="home">
+            <section class="home active section " id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info paddings-1">
@@ -672,7 +672,9 @@
 
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.16/typed.umd.js"
+     integrity="sha512-+2pW8xXU/rNr7VS+H62aqapfRpqFwnSQh9ap6THjsm41AxgA0MhFRtfrABS+Lx2KHJn82UOrnBKhjZOXpom2LQ==" 
+     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script.js"></script>
     <script src="/style-switcher.js"></script>
 </body>
