--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <h3 class="my-profession">I'm a <span class="typing">web designer</span></h3>
                             <p>I am a passionate front-end developer with expertize in tools and technologies like Html,
                                 CSS3, Bootstrap, React, Tailwind, Git and GitHub etc. </p>
-                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                            <a href="# " class="btn">Download Cv</a>
                         </div>
 
                         <div class="home-img paddings-1">
@@ -132,8 +132,8 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons paddings-1">
-                                            <a href="#" class="btn hire-me">Download CV</a>
-                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                            <!-- <a href="#" class="btn hire-me">Download CV</a> -->
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                         </div>
                                     
                                     </div>
