--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="side-bar">
             <div class="logo">
                 <a href="#">Ab<span>Tech</span></a>
+                <!-- <a href="#">A <span>n</span>A<span>Solutions</span></a> -->
             </div>
 
             <div class="side-nav-toggler">
@@ -114,6 +115,7 @@
                                             <p>Age: <span>25</span></p>
                                         </div> -->
 
+                                       
                                         <div class="info-item paddings-1">
                                             <p>website: <span>kponky/github.com</span></p>
                                         </div>
@@ -136,6 +138,10 @@
 
                                         <div class="info-item paddings-1">
                                             <p>Freelance: <span>Available</span></p>
+                                        </div>
+                                        
+                                        <div class="info-item paddings-1">
+                                            p
                                         </div>
                                     </div>
                                     <div class="row">
